# legal-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data_create/: __init__.py  extract_sections.py  extract_sections_2.py  fill_template_aistudio.py  fork_of_marker_surya.ipynb  schemas.py  scraper.ipynb
notebooks/: Untitled-1.ipynb  evaluation_metrics_report.ipynb  generation_eval_analysis.ipynb  qualitycheck.ipynb
rag/: parse_penalty.py
rag/core/: embeddings.py  sentencing.py
rag/evaluation/: __init__.py  eval_utils.py  reasoning_act_eval.py  reasoning_one_call_eval.py  reasoning_past_eval.py  recalculate_saved_metrics.py
rag/generation/: reasoning_act.py  schemas.py
rag/llm/: providers.py
scripts/: check_llm_provider_availability.py  generate_synthetic_summary_aistudio.py  one_time_remove_filtered_cases.py  remove_case_eval.py  splitter.py
tests/: test_reasoning_act.py  test_reasoning_one_call_eval.py  test_sentencing.py
